# k8s-dns-api

./: .dockerignore  Cargo.toml  Dockerfile
src/: error.rs  ingresses_stream.rs  main.rs  services_stream.rs
