[package]
name = "k8s-dns-api"
version = "0.1.0"
authors = ["Mike Cronce <mc@planetscale.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false

[dependencies]
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
env_logger = "0.9"
futures = "0.3.21"
k8s-openapi = {version = "0.14", default-features = false, features = ["v1_23"]}
kube = "0.72"
thiserror = "1.0.31"

